v0.3:
Addition of comments, minor 'cleanup'.